# Instrukt

./: .gitignore  CHANGELOG.md  Makefile  README.md  demos.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-docs.yml
docs/: install.md  quickstart.md
docs/source/: api.rst  conf.py  html_index.rst  index.rst  install.md  md_index.rst  quickstart.md
docs/source/agent/: instrukt.agent.base.InstruktAgent.rst  instrukt.agent.callback.InstruktCallbackHandler.rst  instrukt.agent.events.AgentEvents.rst  instrukt.agent.events.rst  instrukt.agent.loading.ModuleManager.rst  instrukt.agent.state.StateObserver.rst
docs/source/commands/: instrukt.commands.command.CmdGroup.rst  instrukt.commands.command.CmdLog.rst  instrukt.commands.command.Command.rst
docs/source/indexes/: instrukt.indexes.chroma.ChromaWrapper.rst  instrukt.indexes.loaders.AutoDirLoader.rst  instrukt.indexes.loaders.FileInfo.rst  instrukt.indexes.loaders.FileType.rst  instrukt.indexes.loaders.LangSplitter.rst  instrukt.indexes.loaders.SuperDirectoryLoader.rst  instrukt.indexes.manager.IndexManager.rst  instrukt.indexes.schema.Collection.rst  instrukt.indexes.schema.EmbeddingDetails.rst  instrukt.indexes.schema.Index.rst
instrukt/: __init__.py  _logging.py  app.py  binding.py  config.py  console_capture.py  context.py  instrukt.css  schema.py  subprocess.py  types.py  workers.py
instrukt/agent/: __init__.py  base.py  builder.py  callback.py  events.py  loading.py  manager.py  memory.py  state.py
instrukt/agent_modules/chat_qa/: __init__.py  commands.py  main.py  manifest.json
instrukt/agent_modules/coding_ai/: __init__.py  main.py  manifest.json  prompt.py
instrukt/agent_modules/demo/: __init__.py  commands.py  fake_conv.json  fake_conv.py  main.py  manifest.json
instrukt/commands/: __init__.py  agents.py  command.py  config.py  debug.py  help.py  history.py  index.py  root_cmd.py  ui.py
instrukt/errors/: __init__.py
instrukt/indexes/: chroma.py  embeddings.py  loaders.py  manager.py  retrieval.py  schema.py
instrukt/indexes/loaders/: __init__.py  const.py  dirloader.py  mappings.py  schema.py  utils.py
instrukt/indexes/retrieval/: qa_tool.py  utils.py
instrukt/llms/openai/: token_usage.py
instrukt/messages/: agents.py  base.py  indexes.py  log.py
instrukt/output_parsers/: multi_strategy.py  parser_lib.py  strategies.py  strategy.py
instrukt/tools/: base.py
instrukt/tuilib/: conversation.py  forms.py  input.py  messages.py  panels.py  repl_prompt.py  startup_menu.py  strings.py  tooltips.py
instrukt/tuilib/css/: agent_window.css  conversation.css  forms.css  header.css  index.css  keybindings.css  modal_menus.css  path_browser.css  startup_menu.css  test_modal.css  widgets.css
instrukt/tuilib/modals/: basemenu.py  index_menu.py  mainmenu.py  path_browser.py  test.py  tools_menu.py
instrukt/tuilib/widgets/: __init__.py  actionbar.py  dirtree.py  header.py  listview.py  progress.py  spinner.py  spinners.json  textlog.py
instrukt/tuilib/windows/: __init__.py  agent.py  console_window.py  realm.py
instrukt/utils/: asynctools.py  debug.py  misc.py
instrukt/views/: keybindings.py  man.py
instrukt/views/index/: __init__.py  console.py  create.py  main.py
tests/: conftest.py
tests/integration_tests/: test_index_manager.py
tests/integration_tests/examples/: attention.txt  bitcoin.txt
tests/unit_tests/: test_commands.py  test_config.py  test_index.py  test_loaders.py  test_output_parsers.py
tests/unit_tests/data/llm_outputs/: broken_final_answer  parser_error_16624  parser_error_187962  parser_error_385775
